Proyecto con herencia de plantilla

--- a/Proyecto/Portafolio_GRB/Portafolio_GRB/Template/clientes.html
+++ b/Proyecto/Portafolio_GRB/Portafolio_GRB/Template/clientes.html
@@ -4,16 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CLIENTES</title>
 </head>
-<body>
-
-
-    Mi primer plantilla
-
-    <p style="color: red;">Mi nombre es: {{nombre}}</p>
-    <p style="color: green;">Mi apellido es: {{apellido}}</p>
-    
-    
+<body style="background-color: red;"></bodystyle>
+        <h1>VISTA DE CLIENTES</h1>
 </body>
 </html>
