--- a/Proyecto/Portafolio_GRB/Portafolio_GRB/Template/articulos.html
+++ b/Proyecto/Portafolio_GRB/Portafolio_GRB/Template/articulos.html
@@ -1,12 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ARTICULOS</title>
-</head>
-<body style="background-color: green;">
-    <h1>VISTA DE ARTICULOS</h1>
-</body>
-</html>
+{% extends "base.html" %}
+
+<!-- Contenido que cambia-->
+
+{% block contenidoQueCambia %}
+
+</header>
+<div class="container"></div>
+<section class="page-section articulos" id="articulos">
+    <div class="container">
+        <!-- Portfolio Section Heading-->
+        <section class="page-section articulos" id="articulos"></section>
+        <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Articulos</h2>
+        <!-- Icon Divider-->
+        <div class="divider-custom">
+            <div class="divider-custom-line"></div>
+            <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+            <div class="divider-custom-line"></div>
+        </div>
+        <!-- Portfolio Grid Items-->
+        <div class="row justify-content-center">
+            <!-- Portfolio Item 1-->
+            <div class="col-md-6 col-lg-4 mb-5">
+                <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal1">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                    </div>
+                    <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="..." />
+                </div>
+            </div>
+            <!-- Portfolio Item 2-->
+            <div class="col-md-6 col-lg-4 mb-5">
+                <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal2">
+                    <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                        <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                    </div>
+                    <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="..." />
+                </div>
+
+                {% endblock %}
